--- a/test/Vickn.UMeng.Component.Sdk.Test/Vickn.UPush.Component.Sdk.Test.csproj
+++ b/test/Vickn.UMeng.Component.Sdk.Test/Vickn.UPush.Component.Sdk.Test.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <RootNamespace>Vickn.UPush.Component.Sdk.Test</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,10 +13,6 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Vickn.UMeng.Component.Sdk\Vickn.UMeng.Component.Sdk.csproj" />
   </ItemGroup>
 
 </Project>
